<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Vaccine Notifier</string>
    <string name="or">or</string>
    <string name="find">Find</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="enterPin">Enter Pincode</string>
    <string name="dose1">0</string>
    <string name="dose2">0</string>
    <string name="location">APHC Gomoh</string>
    <string name="date">Mar 6, 2010</string>
    <string name="time">12:30 PM</string>
    <string name="vaccineName">Covishild</string>
    <string name="fee_type">Free</string>
    <string name="age">18+</string>
    <string name="todo">TODO</string>
    <string name="text">Find Vaccine</string>
    <string name="empty_list">Empty List!</string>
    <string name="noInternet">No Internet!</string>
    <string name="find_by_pin">Find By PinCode</string>
    <string name="find_by_district">Find By District</string>
    <string name="free">Free</string>
    <string name="doseTwo">Dose2</string>
    <string name="doseOne" tools:ignore="Typos">Dose1</string>
    <string name="underConstruction">Under Construction!</string>
    <string name="select_state">Select Your State!</string>
    <string name="select_district">Select Your District!</string>
    <string name="error_try_again">Error Try again!</string>
    <string name="object_error">DistrictObject Error!</string>
    <string name="enter_pinCode">Please Enter PinCode!</string>
    <string name="enter_correct_pinCode">Please Enter Correct PinCode!</string>
    <string-array name="states">
        <item>Select Your State</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Ladakh</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="select_your_state">
        <item>Select Your District</item>
    </string-array>
    <string-array name="andhra_pradesh_districts">
        <item>Select Your District</item>
        <item>Anantapur</item>
        <item>Chittoor</item>
        <item>East Godavari</item>
        <item>Guntur</item>
        <item>Kadapa</item>
        <item>Krishna</item>
        <item>Kurnool</item>
        <item>Nellore</item>
        <item>Prakasam</item>
        <item>Srikakulam</item>
        <item>Visakhapatnam</item>
        <item>Vizianagaram</item>
        <item>West Godavari</item>
    </string-array>
    <string-array name="arunachal_pradesh_districts">
        <item>Select Your District</item>
        <item>Anjaw</item>
        <item>Siang</item>
        <item>Changlang</item>
        <item>Dibang Valley</item>
        <item>East Kameng</item>
        <item>East Siang</item>
        <item>Kamle</item>
        <item>Kra Daadi</item>
        <item>Kurung Kumey</item>
        <item>Lepa Rada</item>
        <item>Lohit</item>
        <item>Longding</item>
        <item>Lower Dibang Valley</item>
        <item>Lower Siang</item>
        <item>Lower Subansiri</item>
        <item>Namsai</item>
        <item>Pakke Kessang</item>
        <item>Papum Pare</item>
        <item>Shi Yomi</item>
        <item>Tawang</item>
        <item>Tirap</item>
        <item>Upper Siang</item>
        <item>Upper Subansiri</item>
        <item>West Kameng</item>
        <item>West Siang</item>
    </string-array>
    <string-array name="assam_districts">
        <item>Select Your District</item>
        <item>Bajali</item>
        <item>Baksa</item>
        <item>Barpeta</item>
        <item>Biswanath</item>
        <item>Bongaigaon</item>
        <item>Cachar</item>
        <item>Charaideo</item>
        <item>Chirang</item>
        <item>Darrang</item>
        <item>Dhemaji</item>
        <item>Dhubri</item>
        <item>Dibrugarh</item>
        <item>Dima Hasao</item>
        <item>Goalpara</item>
        <item>Golaghat</item>
        <item>Hailakandi</item>
        <item>Hojai</item>
        <item>Jorhat</item>
        <item>Kamrup</item>
        <item>Kamrup Metropolitan</item>
        <item>Karbi Anglong</item>
        <item>Karimganj</item>
        <item>Kokrajhar</item>
        <item>Lakhimpur</item>
        <item>Majuli</item>
        <item>Morigaon</item>
        <item>Nagaon</item>
        <item>Nalbari</item>
        <item>Sivasagar</item>
        <item>Sonitpur</item>
        <item>South Salmara-Mankachar</item>
        <item>Tinsukia</item>
        <item>Udalguri</item>
        <item>West Karbi Anglong</item>
    </string-array>
    <string-array name="bihar_districts">
        <item>Select Your District</item>
        <item>Araria</item>
        <item>Arwal</item>
        <item>Aurangabad</item>
        <item>Banka</item>
        <item>Begusarai</item>
        <item>Bhagalpur</item>
        <item>Bhojpur</item>
        <item>Buxar</item>
        <item>Darbhanga</item>
        <item>East Champaran</item>
        <item>Gaya</item>
        <item>Gopalganj</item>
        <item>Jamui</item>
        <item>Jehanabad</item>
        <item>Kaimur</item>
        <item>Katihar</item>
        <item>Khagaria</item>
        <item>Kishanganj</item>
        <item>Lakhisarai</item>
        <item>Madhepura</item>
        <item>Madhubani</item>
        <item>Munger</item>
        <item>Muzaffarpur</item>
        <item>Nalanda</item>
        <item>Nawada</item>
        <item>Patna</item>
        <item>Purnia</item>
        <item>Rohtas</item>
        <item>Saharsa</item>
        <item>Samastipur</item>
        <item>Saran</item>
        <item>Sheikhpura</item>
        <item>Sheohar</item>
        <item>Sitamarhi</item>
        <item>Siwan</item>
        <item>Supaul</item>
        <item>Vaishali</item>
        <item>West Champaran</item>
    </string-array>
    <string-array name="chhattisgarh_districts">
        <item>Select Your District</item>
        <item>Balod</item>
        <item>Baloda Bazar</item>
        <item>Balrampur Ramanujganj</item>
        <item>Bastar</item>
        <item>Bemetara</item>
        <item>Bijapur</item>
        <item>Bilaspur</item>
        <item>Dantewada</item>
        <item>Dhamtari</item>
        <item>Durg</item>
        <item>Gariaband</item>
        <item>Gaurela Pendra Marwahi</item>
        <item>Janjgir Champa</item>
        <item>Jashpur</item>
        <item>Kabirdham</item>
        <item>Kanker</item>
        <item>Kondagaon</item>
        <item>Korba</item>
        <item>Koriya</item>
        <item>Mahasamund</item>
        <item>Mungeli</item>
        <item>Narayanpur</item>
        <item>Raigarh</item>
        <item>Raipur</item>
        <item>Rajnandgaon</item>
        <item>Sukma</item>
        <item>Surajpur</item>
        <item>Surguja</item>
    </string-array>
    <string-array name="goa_districts">
        <item>Select Your District</item>
        <item>North Goa</item>
        <item>South Goa</item>
    </string-array>
    <string-array name="gujarat_districts">
        <item>Select Your District</item>
        <item>Ahmedabad</item>
        <item>Amreli</item>
        <item>Anand</item>
        <item>Aravalli</item>
        <item>Banaskantha</item>
        <item>Bharuch</item>
        <item>Bhavnagar</item>
        <item>Botad</item>
        <item>Chhota Udaipur</item>
        <item>Dahod</item>
        <item>Dang</item>
        <item>Devbhoomi Dwarka</item>
        <item>Gandhinagar</item>
        <item>Gir Somnath</item>
        <item>Jamnagar</item>
        <item>Junagadh</item>
        <item>Kheda</item>
        <item>Kutch</item>
        <item>Mahisagar</item>
        <item>Mehsana</item>
        <item>Morbi</item>
        <item>Narmada</item>
        <item>Navsari</item>
        <item>Panchmahal</item>
        <item>Patan</item>
        <item>Porbandar</item>
        <item>Rajkot</item>
        <item>Sabarkantha</item>
        <item>Surat</item>
        <item>Surendranagar</item>
        <item>Tapi</item>
        <item>Vadodara</item>
        <item>Valsad</item>
    </string-array>
    <string-array name="haryana_districts">
        <item>Select Your District</item>
        <item>Ambala</item>
        <item>Bhiwani</item>
        <item>Charkhi Dadri</item>
        <item>Faridabad</item>
        <item>Fatehabad</item>
        <item>Gurugram</item>
        <item>Hisar</item>
        <item>Jhajjar</item>
        <item>Jind</item>
        <item>Kaithal</item>
        <item>Karnal</item>
        <item>Kurukshetra</item>
        <item>Mahendragarh</item>
        <item>Mewat</item>
        <item>Palwal</item>
        <item>Panchkula</item>
        <item>Panipat</item>
        <item>Rewari</item>
        <item>Rohtak</item>
        <item>Sirsa</item>
        <item>Sonipat</item>
        <item>Yamunanagar</item>
    </string-array>
    <string-array name="himachal_pradesh_districts">
        <item>Select Your District</item>
        <item>Bilaspur</item>
        <item>Chamba</item>
        <item>Hamirpur</item>
        <item>Kangra</item>
        <item>Kinnaur</item>
        <item>Kullu</item>
        <item>Lahaul Spiti</item>
        <item>Mandi</item>
        <item>Shimla</item>
        <item>Sirmaur</item>
        <item>Solan</item>
        <item>Una</item>
    </string-array>
    <string-array name="jammu_kashmir_districts">
        <item>Select Your District</item>
        <item>Anantnag</item>
        <item>Bandipora</item>
        <item>Baramulla</item>
        <item>Budgam</item>
        <item>Doda</item>
        <item>Ganderbal</item>
        <item>Jammu</item>
        <item>Kathua</item>
        <item>Kishtwar</item>
        <item>Kulgam</item>
        <item>Kupwara</item>
        <item>Poonch</item>
        <item>Pulwama</item>
        <item>Rajouri</item>
        <item>Ramban</item>
        <item>Reasi</item>
        <item>Samba</item>
        <item>Shopian</item>
        <item>Srinagar</item>
        <item>Udhampur</item>
    </string-array>
    <string-array name="jharkhand_districts">
        <item>Select Your District</item>
        <item>Bokaro</item>
        <item>Chatra</item>
        <item>Deoghar</item>
        <item>Dhanbad</item>
        <item>Dumka</item>
        <item>East Singhbhum</item>
        <item>Garhwa</item>
        <item>Giridih</item>
        <item>Godda</item>
        <item>Gumla</item>
        <item>Hazaribagh</item>
        <item>Jamtara</item>
        <item>Khunti</item>
        <item>Koderma</item>
        <item>Latehar</item>
        <item>Lohardaga</item>
        <item>Pakur</item>
        <item>Palamu</item>
        <item>Ramgarh</item>
        <item>Ranchi</item>
        <item>Sahebganj</item>
        <item>Seraikela Kharsawan</item>
        <item>Simdega</item>
        <item>West Singhbhum</item>
    </string-array>
</resources>